istio/policies-weight.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fancave-weight
spec:
  hosts:
  - fancave-teams.istio-demo.svc.cluster.local
  http:
  - route:
    - destination:
        host: fancave-teams.istio-demo.svc.cluster.local
        subset: StableVersion
      weight: 70
    - destination:
        host: fancave-teams.istio-demo.svc.cluster.local
        subset: BetaVersion
      weight: 30
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fancave
spec:
  host: fancave-teams.istio-demo.svc.cluster.local
  subsets:
  - name: StableVersion
    labels:
      version: v1
  - name: BetaVersion
    labels:
      version: beta
